--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.2.6",
     "animejs": "^3.2.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "fabric": "^5.3.0",
@@ -33,6 +34,8 @@
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
